feat: Add comprehensive service registry enhancements and new features
- Add advanced load balancing with weighted round-robin and consistent hashing
- Add client-side service selection with fallback strategies
- Add metrics-based instance scoring and filtering capabilities
- Add circuit breaker pattern for resilient service calls
- Add comprehensive integration tests for all new features
- Add extensive documentation and examples
- Update registry README with load balancing usage guide

New modules and features:
✅ Client selector with automatic fallback
✅ Multiple load balancing algorithms
✅ Real-time metrics collection and reporting
✅ Service instance filtering by metadata and metrics
✅ Production-ready circuit breaker implementation

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>